nova ft da barbara

--- a/style.css
+++ b/style.css
@@ -39,7 +39,7 @@ div#q2 > p{
 }
 body{
     background-color: #0A1507;
-    background-image: url(imagens/dia\ do\ padroeiro.jpg);
+    background-image: url(imagens/Projeto\ Salmo\ Amazônico\ 3.png);
     background-size: 100vw;
     background-repeat: no-repeat;
     background-position: center center;
